Corrected z-index in mobile menu

--- a/components/navbar/hamburger.module.css
+++ b/components/navbar/hamburger.module.css
@@ -3,7 +3,7 @@
     padding: 1rem 1rem;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.774);
-    z-index: 3;
+    z-index: 1;
 }
 
 .bar {
