--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -5,7 +5,7 @@
     width: 100vw;
     font-size: 5vw;
     background-color: rgba(0, 0, 0, 0.774);
-    z-index: 1;
+    z-index: 2;
 }
 
 @media (max-width: 399px) {
